# ExperiNet

./: .gitignore  ActivationFunctions.h  CMakeLists.txt  CostFunctions.h  Layer.h  Network.h  README.md  main.cpp
